# maktabkhooneh-crawler

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: handler.py
src/_core/: __init__.py  logging.py  schemas.py  utils.py
tests/: test_handler.py
