[project]
name = "maktabkhooneh-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "lxml>=5.3.0",
    "click>=8.1.8",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",

]
